--- a/site.html
+++ b/site.html
@@ -4,15 +4,16 @@
     <title>Save the Date</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-
   <body>
-      <div class="polaroid-1 left">
-        <img src="./images/costabrava.jpeg" alt="costabrava"/>
-      </div>
-      <div class="polaroid-2 right">
-        <img src="./images/iggylj-1.jpeg" alt="iggy & lj"/>
-      </div>
-      <img class="brochure left" src="./images/brochure.png" alt="brochure of costa brava"/>
+    <div class="polaroid-1 left">
+      <img src="./images/costabrava.jpeg" alt="costabrava"/>
+    </div>
+    <div class="polaroid-2 right">
+      <img src="./images/iggylj-1.jpeg" alt="iggy & lj"/>
+    </div>
+    <div class="brochure left">
+      <img class="kiwi" src="./images/kiwi.png" alt="kiwi"/>
+      <img class="brochure-image" src="./images/brochure.png" alt="brochure of costa brava"/>
+    </div>
   </body>
-
 </html>
