--- a/site.html
+++ b/site.html
@@ -6,14 +6,18 @@
   </head>
   <body>
     <div class="polaroid-1 left">
-      <img src="./images/costabrava.jpeg" alt="costabrava"/>
+      <img class="pin-1" src="./images/pin-1.png" alt="pin" />
+      <img class="snap" src="./images/costabrava.jpeg" alt="costabrava"/>
     </div>
     <div class="polaroid-2 right">
-      <img src="./images/iggylj-1.jpeg" alt="iggy & lj"/>
+      <img class="pin-2" src="./images/pin-2.png" alt="pin" />
+      <img class="mate-sticker right" src="./images/mate-sticker.png" alt="mate sticker" />
+      <img class="snap" src="./images/iggylj-1.jpeg" alt="iggy & lj"/>
     </div>
     <div class="brochure left">
-      <img class="kiwi" src="./images/kiwi.png" alt="kiwi"/>
+      <img class="kiwi-pin" src="./images/kiwi-pin.png" alt="kiwi pin" />
       <img class="brochure-image" src="./images/brochure.png" alt="brochure of costa brava"/>
     </div>
+    <!-- <img class="flag" src="./images/flag.png" alt="argentine flag" /> -->
   </body>
 </html>
